--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/transparent"
     app:layoutDescription="@xml/fragment_first_scene"
-    tools:context=".ui.FirstFragment">
+    tools:context=".ui.fragment.FirstFragment">
 
     <ProgressBar
         android:id="@+id/progress_bar"
