--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="com.albatros.forecast.ui.FirstFragment"
+        android:name="com.albatros.forecast.ui.fragment.FirstFragment"
         android:label=""
         tools:layout="@layout/fragment_first" />
 
