--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -11,8 +11,8 @@
 
     <ProgressBar
         android:id="@+id/progress_bar"
-        android:layout_width="60dp"
         style="@style/ProgressBarTheme"
+        android:layout_width="60dp"
         android:layout_height="60dp"
         app:layout_constraintBottom_toBottomOf="@+id/scroll_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,18 +25,69 @@
         android:layout_height="match_parent"
         android:visibility="invisible">
 
-        <TextView
-            android:id="@+id/text_content"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="24dp"
-            android:gravity="center"
-            android:fontFamily="@font/navigo_regular"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                app:cardBackgroundColor="#E9000000"
+                android:layout_height="match_parent"
+                android:layout_margin="8dp"
+                android:layout_marginTop="24dp"
+                app:cardCornerRadius="10dp"
+                app:cardMaxElevation="4dp">
+
+                    <TextView
+                        android:id="@+id/text_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:fontFamily="@font/navigo_regular"
+                        android:gravity="center"
+                        android:padding="8dp"
+                        android:textColor="#c7dbf4"
+                        android:textSize="24sp"
+                        app:layout_constraintBottom_toTopOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:overScrollMode="never">
+
+            </androidx.recyclerview.widget.RecyclerView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                app:cardBackgroundColor="#E9000000"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:paddingBottom="24dp"
+                android:layout_marginTop="120dp"
+                app:cardCornerRadius="10dp"
+                app:cardMaxElevation="4dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/navigo_regular"
+                android:gravity="center"
+                android:padding="8dp"
+                android:textColor="#c7dbf4"
+                android:text="@string/hint"
+                android:textSize="20sp" />
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
 
