--- a/app/src/main/res/layout/activity_presentation.xml
+++ b/app/src/main/res/layout/activity_presentation.xml
@@ -76,12 +76,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@android:color/transparent"
-                        android:fontFamily="@font/navigo_regular"
+                        android:fontFamily="@font/navigo_bold"
                         android:gravity="top|center"
                         android:paddingStart="0dp"
                         android:paddingEnd="20dp"
                         android:paddingBottom="24dp"
-                        android:textSize="20sp"
+                        android:textSize="24sp"
                         android:visibility="invisible"
                         app:layout_collapseMode="pin" />
 
