--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -28,30 +28,33 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:gravity="center">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                app:cardBackgroundColor="#E9000000"
                 android:layout_height="match_parent"
-                android:layout_margin="8dp"
                 android:layout_marginTop="24dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="24dp"
+                app:cardBackgroundColor="#E9000000"
                 app:cardCornerRadius="10dp"
                 app:cardMaxElevation="4dp">
 
-                    <TextView
-                        android:id="@+id/text_content"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:fontFamily="@font/navigo_regular"
-                        android:gravity="center"
-                        android:padding="8dp"
-                        android:textColor="#c7dbf4"
-                        android:textSize="24sp"
-                        app:layout_constraintBottom_toTopOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    android:id="@+id/text_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/navigo_regular"
+                    android:gravity="center"
+                    android:padding="8dp"
+                    android:textColor="#c7dbf4"
+                    android:textSize="24sp"
+                    app:layout_constraintBottom_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.cardview.widget.CardView>
 
@@ -60,32 +63,40 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
+                android:layout_margin="36dp"
+                android:layout_gravity="center"
                 android:overScrollMode="never">
 
             </androidx.recyclerview.widget.RecyclerView>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                app:cardBackgroundColor="#E9000000"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
+                android:layout_marginTop="100dp"
                 android:layout_marginRight="8dp"
                 android:paddingBottom="24dp"
-                android:layout_marginTop="120dp"
+                app:cardBackgroundColor="#E9000000"
                 app:cardCornerRadius="10dp"
                 app:cardMaxElevation="4dp">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/navigo_regular"
-                android:gravity="center"
-                android:padding="8dp"
-                android:textColor="#c7dbf4"
-                android:text="@string/hint"
-                android:textSize="20sp" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/navigo_regular"
+                    android:gravity="center"
+                    android:padding="8dp"
+                    android:text="@string/hint"
+                    android:textColor="#c7dbf4"
+                    android:textSize="20sp" />
 
             </androidx.cardview.widget.CardView>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:alpha="0"
+                android:contentDescription="@string/app_name" />
 
         </LinearLayout>
 
