--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -28,16 +28,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginBottom="24dp"
+                android:layout_marginBottom="16dp"
                 app:cardBackgroundColor="#E9000000"
                 app:cardCornerRadius="10dp"
                 app:cardMaxElevation="4dp">
@@ -58,24 +58,33 @@
 
             </androidx.cardview.widget.CardView>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:fontFamily="@font/navigo_bold"
+                android:padding="8dp"
+                android:text="@string/intro"
+                android:textColor="#c7dbf4"
+                android:textSize="24sp" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/list"
-                android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="12dp"
+                android:layout_width="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="30dp"
                 android:orientation="vertical"
-                android:layout_margin="36dp"
-                android:layout_gravity="center"
-                android:overScrollMode="never">
-
-            </androidx.recyclerview.widget.RecyclerView>
+                android:overScrollMode="never"/>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="60dp"
                 android:layout_marginRight="8dp"
-                android:paddingBottom="24dp"
+                android:padding="8dp"
                 app:cardBackgroundColor="#E9000000"
                 app:cardCornerRadius="10dp"
                 app:cardMaxElevation="4dp">
@@ -83,7 +92,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/navigo_regular"
+                    android:fontFamily="@font/navigo_medium"
                     android:gravity="center"
                     android:padding="8dp"
                     android:text="@string/hint"
