--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,9 +4,15 @@
     <item
         android:id="@+id/exit"
         android:icon="@drawable/ic_baseline_exit"
-        android:orderInCategory="2"
+        android:orderInCategory="3"
         android:title="@string/app_name"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/refresh"
+        android:icon="@drawable/ic_refresh"
+        android:orderInCategory="2"
+        android:title="@string/app_name"
+        app:showAsAction="always" />
     <item
         android:id="@+id/settings"
         android:icon="@drawable/ic_baseline_settings"
