--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -11,7 +11,6 @@
 
     <ProgressBar
         android:id="@+id/progress_bar"
-        style="@style/ProgressBarTheme"
         android:layout_width="60dp"
         android:layout_height="60dp"
         app:layout_constraintBottom_toBottomOf="@+id/scroll_content"
@@ -38,7 +37,7 @@
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="16dp"
-                app:cardBackgroundColor="#E9000000"
+                app:cardBackgroundColor="@color/card_back"
                 app:cardCornerRadius="10dp"
                 app:cardMaxElevation="4dp">
 
@@ -49,7 +48,7 @@
                     android:fontFamily="@font/navigo_regular"
                     android:gravity="center"
                     android:padding="8dp"
-                    android:textColor="#c7dbf4"
+                    android:textColor="@color/sky_font"
                     android:textSize="24sp"
                     app:layout_constraintBottom_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +64,7 @@
                 android:fontFamily="@font/navigo_bold"
                 android:padding="8dp"
                 android:text="@string/intro"
-                android:textColor="#c7dbf4"
+                android:textColor="@color/sky_font"
                 android:textSize="24sp" />
 
             <androidx.recyclerview.widget.RecyclerView
@@ -85,7 +84,7 @@
                 android:layout_marginTop="60dp"
                 android:layout_marginRight="8dp"
                 android:padding="8dp"
-                app:cardBackgroundColor="#E9000000"
+                app:cardBackgroundColor="@color/card_back"
                 app:cardCornerRadius="10dp"
                 app:cardMaxElevation="4dp">
 
@@ -96,7 +95,7 @@
                     android:gravity="center"
                     android:padding="8dp"
                     android:text="@string/hint"
-                    android:textColor="#c7dbf4"
+                    android:textColor="@color/sky_font"
                     android:textSize="20sp" />
 
             </androidx.cardview.widget.CardView>
