--- a/app/src/main/res/layout/part_layout.xml
+++ b/app/src/main/res/layout/part_layout.xml
@@ -23,7 +23,7 @@
             android:background="@android:color/transparent"
             android:contentDescription="@string/app_name"
             android:scaleType="centerCrop"
-            android:textColor="#c7dbf4"
+            android:textColor="@color/sky_font"
             android:visibility="invisible" />
 
         <TextView
@@ -36,7 +36,7 @@
             android:paddingStart="4dp"
             android:paddingEnd="0dp"
             android:paddingTop="8dp"
-            android:textColor="#c7dbf4"
+            android:textColor="@color/sky_font"
             android:textSize="20sp"
             android:visibility="invisible" />
 
@@ -49,7 +49,7 @@
             android:fontFamily="@font/navigo_medium"
             android:gravity="center"
             android:paddingTop="8dp"
-            android:textColor="#c7dbf4"
+            android:textColor="@color/sky_font"
             android:textSize="24sp"
             android:visibility="invisible" />
 
@@ -62,7 +62,7 @@
         android:background="@android:color/transparent"
         android:fontFamily="@font/navigo_regular"
         android:gravity="center"
-        android:textColor="#c7dbf4"
+        android:textColor="@color/sky_font"
         android:textSize="20sp"
         android:visibility="invisible" />
 
@@ -73,7 +73,7 @@
         android:background="@android:color/transparent"
         android:fontFamily="@font/navigo_regular"
         android:gravity="center"
-        android:textColor="#c7dbf4"
+        android:textColor="@color/sky_font"
         android:textSize="20sp"
         android:visibility="invisible" />
 
@@ -84,7 +84,7 @@
         android:background="@android:color/transparent"
         android:fontFamily="@font/navigo_regular"
         android:gravity="center"
-        android:textColor="#c7dbf4"
+        android:textColor="@color/sky_font"
         android:textSize="20sp"
         android:visibility="invisible" />
 
