--- a/app/src/main/res/drawable/main_gradient.xml
+++ b/app/src/main/res/drawable/main_gradient.xml
@@ -3,6 +3,6 @@
     <gradient
         android:type="linear"
         android:angle="90"
-        android:startColor="#81A9D3"
-        android:endColor="#4685DA" />
+        android:startColor="@color/sky_light"
+        android:endColor="@color/sky_dark" />
 </shape>
