--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -30,32 +30,19 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="8dp"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="16dp"
-                app:cardBackgroundColor="@color/card_back"
-                app:cardCornerRadius="10dp"
-                app:cardMaxElevation="4dp">
+                android:fontFamily="@font/navigo_bold"
+                android:padding="8dp"
+                android:text="@string/intro_today"
+                android:textColor="@color/sky_font"
+                android:textSize="24sp" />
 
-                <TextView
-                    android:id="@+id/text_content"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:fontFamily="@font/navigo_regular"
-                    android:gravity="center"
-                    android:padding="8dp"
-                    android:textColor="@color/sky_font"
-                    android:textSize="24sp"
-                    app:layout_constraintBottom_toTopOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-            </androidx.cardview.widget.CardView>
+            <include
+                android:id="@+id/content_layout"
+                layout="@layout/content_layout" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -69,13 +56,13 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/list"
-                android:layout_height="match_parent"
-                android:layout_marginTop="12dp"
                 android:layout_width="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="30dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginBottom="16dp"
                 android:orientation="vertical"
-                android:overScrollMode="never"/>
+                android:overScrollMode="never" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -93,7 +80,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/navigo_medium"
                     android:gravity="center"
-                    android:padding="8dp"
+                    android:padding="4dp"
                     android:text="@string/hint"
                     android:textColor="@color/sky_font"
                     android:textSize="20sp" />
