--- a/app/src/main/res/layout/activity_presentation.xml
+++ b/app/src/main/res/layout/activity_presentation.xml
@@ -59,6 +59,7 @@
 
                     <TextView
                         android:id="@+id/temp"
+                        android:theme="@style/header_text_style"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@android:color/transparent"
