--- a/app/src/main/res/layout/activity_presentation.xml
+++ b/app/src/main/res/layout/activity_presentation.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-
     tools:context=".ui.activity.PresentationActivity">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -40,11 +39,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
+                android:gravity="center"
                 android:layout_marginTop="40dp">
 
                 <ImageView
                     android:id="@+id/img_state"
                     android:layout_width="200dp"
+                    android:layout_marginStart="12dp"
                     android:layout_height="match_parent"
                     android:background="@android:color/transparent"
                     android:contentDescription="@string/app_name"
@@ -55,20 +56,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:paddingTop="24dp">
+                    android:paddingTop="16dp">
 
                     <TextView
                         android:id="@+id/temp"
-                        android:theme="@style/header_text_style"
+                        android:layout_marginTop="24dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@android:color/transparent"
                         android:fontFamily="@font/navigo_medium"
-                        android:gravity="center_vertical|center"
+                        android:gravity="center"
                         android:paddingStart="0dp"
                         android:paddingEnd="20dp"
                         android:paddingBottom="12dp"
                         android:textSize="44sp"
+                        android:theme="@style/header_text_style"
                         android:visibility="invisible"
                         app:layout_collapseMode="pin" />
 
@@ -78,7 +80,7 @@
                         android:layout_height="match_parent"
                         android:background="@android:color/transparent"
                         android:fontFamily="@font/navigo_bold"
-                        android:gravity="top|center"
+                        android:gravity="center"
                         android:paddingStart="0dp"
                         android:paddingEnd="20dp"
                         android:paddingBottom="24dp"
