--- a/app/src/main/res/layout/content_layout.xml
+++ b/app/src/main/res/layout/content_layout.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/temp_fact"
+            android:id="@+id/tempFact"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -68,7 +68,7 @@
             android:text="@string/wind_speed_hint"
             android:theme="@style/hint_text_style"
             app:layout_constraintStart_toStartOf="@+id/temp_hint"
-            app:layout_constraintTop_toBottomOf="@+id/temp_fact" />
+            app:layout_constraintTop_toBottomOf="@+id/tempFact" />
 
         <TextView
             android:id="@+id/wind_dir_hint"
@@ -107,7 +107,7 @@
             android:text="@string/pressure_hint"
             android:theme="@style/hint_text_style"
             app:layout_constraintStart_toStartOf="@+id/wind_dir_fact"
-            app:layout_constraintTop_toBottomOf="@+id/wind_dir_fact" />
+            app:layout_constraintTop_toBottomOf="@+id/wind_speed_fact" />
 
         <TextView
             android:id="@+id/humidity_fact"
