--- a/app/src/main/res/layout/activity_presentation.xml
+++ b/app/src/main/res/layout/activity_presentation.xml
@@ -55,17 +55,19 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginStart="24dp"
+                    android:gravity="center"
                     android:orientation="vertical"
                     android:paddingTop="16dp">
 
                     <TextView
                         android:id="@+id/temp"
-                        android:layout_marginTop="24dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="24dp"
                         android:background="@android:color/transparent"
                         android:fontFamily="@font/navigo_medium"
-                        android:gravity="center"
+                        android:gravity="start"
                         android:paddingStart="0dp"
                         android:paddingEnd="20dp"
                         android:paddingBottom="12dp"
@@ -80,7 +82,7 @@
                         android:layout_height="match_parent"
                         android:background="@android:color/transparent"
                         android:fontFamily="@font/navigo_bold"
-                        android:gravity="center"
+                        android:gravity="start"
                         android:paddingStart="0dp"
                         android:paddingEnd="20dp"
                         android:paddingBottom="24dp"
